Added safety save for non relational main.py script

--- a/main.ipynb
+++ b/main.ipynb
@@ -305,31 +305,7 @@
    "execution_count": 114,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "def get_relation_preds(centroids, full_oblist, eg_num, img_objects):\n",
-    "\n",
-    "    rel_preds = []\n",
-    "    for partner_idx in range(len(centroids)):\n",
-    "        for reference_idx in range(len(centroids)):\n",
-    "            if partner_idx==reference_idx:\n",
-    "                continue\n",
-    "            \n",
-    "            # ref_id = full_oblist.index(class_names[r['class_ids'][reference_idx]].split())\n",
-    "            # part_id = full_oblist.index(class_names[r['class_ids'][partner_idx]].split())\n",
-    "\n",
-    "            ref_id = full_oblist.index(img_objects[reference_idx].split())\n",
-    "            part_id = full_oblist.index(img_objects[partner_idx].split())\n",
-    "\n",
-    "            if centroids[partner_idx] > centroids[reference_idx]:\n",
-    "                relation = 'right_of'\n",
-    "            elif centroids[partner_idx] < centroids[reference_idx]:\n",
-    "                relation = 'left_of'\n",
-    "            \n",
-    "            rel_preds.append(f'{relation}(oid_{ref_id}, oid_{part_id}, example_{eg_num}).\\n')\n",
-    "    \n",
-    "    return rel_preds\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -338,38 +314,7 @@
    "outputs": [],
    "source": [
     "# Inference on all images in sample images folder\n",
-    "# oblist contains list of objects in each of the images\n",
-    "\n",
-    "def inference(IMAGE_DIR, model):\n",
-    "\n",
-    "    file_names = sorted(next(os.walk(IMAGE_DIR))[2])\n",
-    "\n",
-    "    if '.DS_Store' in file_names:\n",
-    "        file_names.remove(\".DS_Store\")\n",
-    "\n",
-    "    oblist = []\n",
-    "    ilp_classes = []\n",
-    "    centroids = {'X':[], 'Y':[]}\n",
-    "\n",
-    "    print('Detecting objects...')\n",
-    "\n",
-    "\n",
-    "    for filename in tqdm(file_names):\n",
-    "        image = skimage.io.imread(os.path.join(IMAGE_DIR, filename))\n",
-    "        image = image[:,:,:3]\n",
-    "        results = model.detect([image], verbose=0)\n",
-    "        r = results[0]\n",
-    "        oblist.append([class_names[r['class_ids'][i]] for i in range(len(r['class_ids']))])\n",
-    "\n",
-    "        # get centroids\n",
-    "        rois = r['rois'].tolist()\n",
-    "        centroids['X'].append([(roi[1] + roi[3])/2 for roi in rois])\n",
-    "        centroids['Y'].append([(roi[0] + roi[2])/2 for roi in rois])\n",
-    "\n",
-    "        ilp_classes.append(f'c{filename[19]}')\n",
-    "    \n",
-    "    return oblist, ilp_classes, centroids\n",
-    "\n"
+    "# oblist contains list of objects in each of the images\n"
    ]
   },
   {
@@ -485,29 +430,68 @@
     "            bk_file.write(f\"has_size({object_id}, {size}).\\n\")\n",
     "            object_count += 1\n",
     "        \n",
-    "        bk_file.write(f\"contains({object_id}, {example_id}).\\n\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        bk_file.write(f\"contains({object_id}, {example_id}).\\n\")\n",
+    "\n",
+    "def inference(IMAGE_DIR, model):\n",
+    "\n",
+    "    file_names = sorted(next(os.walk(IMAGE_DIR))[2])\n",
+    "\n",
+    "    if '.DS_Store' in file_names:\n",
+    "        file_names.remove(\".DS_Store\")\n",
+    "\n",
+    "    oblist = []\n",
+    "    ilp_classes = []\n",
+    "    centroids = {'X':[], 'Y':[]}\n",
+    "\n",
+    "    print('Detecting objects...')\n",
+    "\n",
+    "\n",
+    "    for filename in tqdm(file_names):\n",
+    "        image = skimage.io.imread(os.path.join(IMAGE_DIR, filename))\n",
+    "        image = image[:,:,:3]\n",
+    "        results = model.detect([image], verbose=0)\n",
+    "        r = results[0]\n",
+    "        oblist.append([class_names[r['class_ids'][i]] for i in range(len(r['class_ids']))])\n",
+    "\n",
+    "        # get centroids\n",
+    "        rois = r['rois'].tolist()\n",
+    "        centroids['X'].append([(roi[1] + roi[3])/2 for roi in rois])\n",
+    "        centroids['Y'].append([(roi[0] + roi[2])/2 for roi in rois])\n",
+    "\n",
+    "        ilp_classes.append(f'c{filename[19]}')\n",
+    "    \n",
+    "    return oblist, ilp_classes, centroids\n",
+    "\n",
+    "def get_relation_preds(centroids, full_oblist, eg_num, img_objects):\n",
+    "\n",
+    "    rel_preds = []\n",
+    "    for partner_idx in range(len(centroids)):\n",
+    "        for reference_idx in range(len(centroids)):\n",
+    "            if partner_idx==reference_idx:\n",
+    "                continue\n",
+    "            \n",
+    "            # ref_id = full_oblist.index(class_names[r['class_ids'][reference_idx]].split())\n",
+    "            # part_id = full_oblist.index(class_names[r['class_ids'][partner_idx]].split())\n",
+    "\n",
+    "            ref_id = full_oblist.index(img_objects[reference_idx].split())\n",
+    "            part_id = full_oblist.index(img_objects[partner_idx].split())\n",
+    "\n",
+    "            if centroids[partner_idx] > centroids[reference_idx]:\n",
+    "                relation = 'right_of'\n",
+    "            elif centroids[partner_idx] < centroids[reference_idx]:\n",
+    "                relation = 'left_of'\n",
+    "            \n",
+    "            rel_preds.append(f'{relation}(oid_{ref_id}, oid_{part_id}, example_{eg_num}).\\n')\n",
+    "    \n",
+    "    return rel_preds\n",
+    "\n",
     "def write_ground_truths(ilp_classes, f_file, n_file):\n",
     "    for id in range(0,len(ilp_classes)):\n",
     "        if ilp_classes[id] == 'c0':\n",
     "            f_file.write(f\"true_class(example_{id}).\\n\")\n",
     "        else:\n",
-    "            n_file.write(f\"true_class(example_{id}).\\n\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            n_file.write(f\"true_class(example_{id}).\\n\")\n",
+    "\n",
     "def write_aleph_settings(b_file, features = ['shape','material','color','size'], \\\n",
     "    id_column = \"oid\", output_filename = \"hans_aleph\"):\n",
     "\n",
@@ -546,6 +530,20 @@
     "    b_file.write(\":- set(clauselength, 20).\\n\")\n",
     "    b_file.write(f\":- consult('{output_filename + '.bk'}').\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
