added tranformation functions for presenting explanations in NL

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -120,11 +120,61 @@
     "    bk_file.close()\n",
     "\n",
     "def ilp_induce(dataset, prolog):\n",
+    "\n",
     "    # generate initial ILP thoery and save to a file\n",
     "    prolog.consult('aleph6.pl')\n",
     "    list(prolog.query(f\"read_all('aleph_input/{dataset}_aleph').\"))\n",
     "    list(prolog.query(\"induce.\"))\n",
-    "    list(prolog.query(f\"write_rules('{dataset}_theory.txt').\"))"
+    "    list(prolog.query(f\"write_rules('{dataset}_theory.txt').\"))\n",
+    "\n",
+    "# Below are in the GUI_utils file\n",
+    "\n",
+    "def delete_existing_constraints(dataset='hans'):\n",
+    "    '''Currently stored within GUI_utils'''\n",
+    "    lines = []\n",
+    "    path = f'aleph_input/{dataset}_aleph.bk'\n",
+    "    with open(path, 'r') as fp:\n",
+    "        lines = fp.readlines()\n",
+    "    \n",
+    "    # write file\n",
+    "    with open(path, 'w') as fp:\n",
+    "        for line in lines:\n",
+    "            if line[0:5] != 'false' and line != \":-consult('constraints.pl).\\n\":\n",
+    "                fp.write(line)\n",
+    "\n",
+    "\n",
+    "def transform_clause(og_clause):\n",
+    "    '''Transforms clause to natural language'''\n",
+    "\n",
+    "    clause = list(set(og_clause))\n",
+    "\n",
+    "    # find ALL THE first contains predicate\n",
+    "    contains_preds = [i for i in clause if 'contains' in i]\n",
+    "    nl_clause = ''\n",
+    "    for object_predicate in contains_preds:\n",
+    "        # add an \"image contains an object X\" sentence\n",
+    "        clause.remove(object_predicate)\n",
+    "        var = object_predicate.rpartition('contains(')[2].rpartition(', ')[0]\n",
+    "        nl_clause = nl_clause + f\"Image contains an object {var}\"\n",
+    "\n",
+    "        # search for the elements in the clause containing that variable\n",
+    "        # for each element: add the attribute and the attribute value\n",
+    "        attribute_preds = [i for i in clause if var in i]\n",
+    "        for idx, predicate in enumerate(attribute_preds):\n",
+    "            attribute = predicate.rpartition('('+var)[0].rpartition('has_')[2]\n",
+    "            att_value = predicate.rpartition(var+', ')[2][:-1]\n",
+    "\n",
+    "            if len(attribute_preds) > 1 and idx == 0:\n",
+    "                nl_clause = nl_clause + f\" with {attribute} {att_value}\"\n",
+    "            elif len(attribute_preds) == 1 and idx ==0:\n",
+    "                nl_clause = nl_clause + f\" with {attribute} {att_value}. \"\n",
+    "            elif idx+1 == len(attribute_preds) and idx > 0:\n",
+    "                nl_clause = nl_clause + f\" and {attribute} {att_value}.\\n\"\n",
+    "            else:\n",
+    "                nl_clause = nl_clause + f\" and {attribute} {att_value}\"\n",
+    "            \n",
+    "    return nl_clause\n",
+    "\n"
    ]
   },
   {
@@ -168,29 +218,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tranform clasues to natural language"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clause = ['contains(oid_69, example_1)', 'has_shape(oid_69, cylinder)', 'contains(oid_17, example_1)', 'has_shape(oid_17, cube)', 'contains(oid_69, example_1)', 'has_shape(oid_69, cylinder)', 'contains(oid_17, example_1)', 'has_shape(oid_17, cube)', 'has_color(oid_17, gray)'] \n",
+    "\n",
+    "nl_clause = \"image containts an object 1 with shape cyclindar. Image contains object 2\\\n",
+    "    with shape cube and color gray.\" \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "'Image contains an object oid_69 with shape cylinder. Image contains an object oid_17 with color gray and shape cube.\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "clause = ['contains(oid_69, example_1)', 'has_shape(oid_69, cylinder)', 'contains(oid_17, example_1)', 'has_shape(oid_17, cube)', 'contains(oid_69, example_1)', 'has_shape(oid_69, cylinder)', 'contains(oid_17, example_1)', 'has_shape(oid_17, cube)', 'has_color(oid_17, gray)'] \n",
+    "nl = transform_clause(clause)\n",
+    "nl"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lines = []\n",
+    "# read file\n",
+    "with open(r\"E:\\demos\\files\\sample.txt\", 'r') as fp:\n",
+    "    # read an store all lines into list\n",
+    "    lines = fp.readlines()\n",
+    "\n",
+    "# Write file\n",
+    "with open(r\"E:\\demos\\files\\sample.txt\", 'w') as fp:\n",
+    "    # iterate each line\n",
+    "    for number, line in enumerate(lines):\n",
+    "        # delete line 5 and 8. or pass any Nth line you want to remove\n",
+    "        # note list index starts from 0\n",
+    "        if number not in [4, 7]:\n",
+    "            fp.write(line)"
+   ]
   }
  ],
  "metadata": {
